// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dkPulx fBRefz"
>
  <div
    class="sc-eCIlHX bqdLhG"
  >
    <span
      class="sc-jRQBzY"
    >
      0
    </span>
    <span
      class="sc-gKclGN bqDILR"
    >
      42
    </span>
  </div>
  <button
    class="sc-bdvumH sc-gsDKeI gMOzyQ dNJqeK"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dkPulx fBRefz"
>
  <div
    class="sc-hKwBBi gchgQV"
  >
    🛌🛌
  </div>
  <button
    class="sc-bdvumH sc-gsDKeI chOlGn dNJqeK"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dkPulx fBRefz"
>
  <div
    class="sc-hKwBBi gchgQV"
  >
    🍅
  </div>
  <button
    class="sc-bdvumH sc-gsDKeI chOlGn dNJqeK"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dkPulx fBRefz"
>
  <div
    class="sc-hKwBBi gchgQV"
  >
    🛌
  </div>
  <button
    class="sc-bdvumH sc-gsDKeI chOlGn dNJqeK"
  >
    Start
  </button>
</div>
`;
